style.css
@import url("https://fonts.googleapis.com/css2?family=Public+Sans:wght@300;400;700&display=swap");
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

:root {
  --darkBlue: hsl(233, 26%, 24%);
  --limeGreen: hsl(136, 65%, 51%);
  --brightCyan: hsl(192, 70%, 51%);
  --grayishBlue: hsl(233, 8%, 62%);
  --lightGrayishBlue: hsl(220, 16%, 96%);
  --veryLightGray: hsl(0, 0%, 98%);
  --white: hsl(0, 0%, 100%);
}

body {
  position: relative;
  overflow-x: hidden;
  width: 100vw;
  font-family: "Public Sans", sans-serif;
}

a {
  text-decoration: none;
}

header {
  background-color: var(--white);
  padding: 5px 50px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  position: absolute;
  z-index: 2;
  width: 100vw;
}

.nav li {
  display: inline-block;
}

.nav li a {
  position: relative;
  margin-left: 20px;
  color: var(--grayishBlue);
}

.nav li a::after {
  content: "";
  position: absolute;
  left: 50%;
  transform: translateX(-50%);
  bottom: -35px;
  width: 0;
  height: 4px;
  background: linear-gradient(to right, hsl(136, 65%, 51%), hsl(192, 70%, 51%));
  transition: all 0.5s;
}

.nav li a:hover::after {
  width: 100%;
}

.burger-icon {
  display: none;
  outline: none;
  border: none;
  background: none;
  cursor: pointer;
}

span,
p {
  color: var(--grayishBlue);
}

.info {
  background-color: var(--veryLightGray);
  display: grid;
  grid-template-columns: 40% 60%;
  height: 90vh;
  justify-content: center;
  align-items: center;
  position: relative;
  overflow-x: hidden;
}

.full-info {
  display: flex;
  flex-direction: column;
  width: 70%;
  transform: translate(40%, -40%);
}

.req-invite-btn {
  display: grid;
  border: none;
  outline: none;
  all: unset;
  width: 7em;
  background: linear-gradient(to right, hsl(136, 65%, 51%), hsl(192, 70%, 51%));
  color: var(--white);
  margin: 20px 0;
  padding: 10px 40px;
  text-align: center;
  border-radius: 40px;
  cursor: pointer;
}

.full-info h1 {
  font-size: 40px;
  margin-bottom: 20px;
}

.mockup {
  background: url("./images/bg-intro-desktop.svg");
  background-repeat: no-repeat;
  background-size: cover;
  background-position-x: 50px;
  background-position-y: -80px;
  display: flex;
  justify-content: center;
  align-items: center;
}

.mockup-img {
  width: 85%;
  transform: translate(140px, -50px);
}

.aim {
  background-color: var(--lightGrayishBlue);
  padding: 100px 50px;
}
.benefit {
  position: relative;
  padding-bottom: 20px;
  width: 45vw;
}

.benefit h1 {
  font-size: 40px;
  margin: 20px 0;
}

.benefit p {
  color: var(--grayishBlue);
}

.aim .aim-list {
  display: flex;
  justify-content: space-between;
  gap: 1.5em;
}

.aim-list > div img {
  padding: 10px 0;
}

.aim-list > div h2 {
  padding: 15px 0;
}

.latest-articles {
  padding: 100px 50px;
  background: var(--veryLightGray);
}

.latest-articles > h1 {
  font-size: 35px;
  margin-bottom: 30px;
}

.articles {
  display: flex;
  justify-content: space-between;
  gap: 1em;
}

.articles .article_card {
  background: var(--white);
  border-radius: 10px;
  overflow: hidden;
}

.article-thumbnail {
  width: 100%;
  height: 200px;
  padding-bottom: 15px;
}

.article_card .postedBy {
  margin: 0px 0;
}

.article_card .article-title {
  font-size: 20px;
  padding: 10px 0;
}

.card_body {
  padding: 20px;
}

footer {
  background-color: hsl(233, 26%, 24%);
  display: flex;
  justify-content: space-between;
  padding: 10px 50px;
}
.footer-1 {
  display: flex;
  justify-content: space-between;
  flex-basis: 50%;
}

footer ul {
  list-style: none;
}

.social_link {
  display: flex;
  justify-content: space-evenly;
  flex-direction: column;
}

.social_link .logo-img {
  color: #fff;
  padding-bottom: 20px;
}

.social_link_list li {
  display: inline-block;
  margin-right: 10px;
}

.ft-nav-1 li,
.ft-nav-2 li {
  margin: 10px 0;
}

.ft-nav-1 li a,
.ft-nav-2 li a {
  color: var(--lightGrayishBlue);
  font-size: 20px;
}

.footer-2 {
  display: flex;
  align-items: flex-end;
  flex-direction: column;
}

.footer-2 h4 {
  color: var(--grayishBlue);
}

@media screen and (max-width: 765px) {
  header {
    padding: 30px 40px;
  }
  .nav {
    position: absolute;
    top: 100px;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    background: #fff;
    width: 80%;
    padding: 40px;
    border-radius: 10px;
    text-align: center;
    opacity: 0;
    transition: all 0.5s ease-in-out;
  }

  header .nav li {
    margin: 20px 0;
  }

  header .nav li a {
    color: var(--darkBlue);
    font-weight: 900;
    font-size: 20px;
  }

  .nav li a {
    margin: 0;
  }

  .nav li a::after {
    bottom: -20px;
  }

  header .req-invite-btn {
    display: none;
  }

  .visible {
    opacity: 1;
  }

  .burger-icon {
    display: block;
  }

  .info {
    all: unset;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column-reverse;
    background: hsl(220, 16%, 96%);
  }

  .full-info {
    width: 100%;
    transform: translate(0);
    padding: 0 40px;
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
  }

  .full-info h1 {
    width: 95%;
  }

  .full-info span {
    font-size: 20px;
  }

  .mockup {
    background-size: cover;
    background-position-x: -10px;
    background-position-y: -60px;
  }

  .mockup-img {
    width: 100%;
    transform: translate(0, -70px);
    filter: invert(10%);
  }

  .aim {
    padding: 40px;
    width: 100vw;
  }

  .aim .aim-list {
    flex-direction: column;
  }

  .aim div {
    width: 93%;
    margin: auto;
    text-align: center;
  }

  .aim div p {
    font-size: 20px;
    color: var(--grayishBlue);
  }

  .latest-articles {
    padding: 40px;
  }

  .articles {
    flex-direction: column;
  }

  .articles .article_card {
    width: 100%;
  }

  .article-thumbnail {
    height: 300px;
  }

  .card_body {
    padding: 10px 20px 40px 20px;
  }

  footer {
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding: 40px;
  }

  .footer-1 {
    flex-direction: column;
  }

  .ft-nav-1,
  .ft-nav-2 {
    text-align: center;
  }

  .ft-nav-1 li,
  .ft-nav-2 li {
    margin: 20px 0;
  }

  .ft-nav-2 {
    margin-top: -20px;
  }

  .footer-2 {
    justify-content: center;
    align-items: center;
  }

  .footer-2 h4 {
    font-size: 20px;
  }
}

